# nodaysidle-ironclados

./: .dockerignore  .gitignore  AGENT.md  ARD.md  DEV.md  Dockerfile  PRD.md  README.md  TASKPLAN.md  TODO.md  TRD.md  WEBSITE_PLAN.md  docker-compose.yml  package-lock.json  package.json  tsconfig.json
.agent/workflows/: build-showcase-website.md
backend/: .env.example  package.json  tsconfig.json
backend/src/: index.ts  server.ts
backend/src/config/: env.ts
backend/src/db/: index.ts  pool.ts
backend/src/db/migrations/: 001_create_artifacts_table.down.sql  001_create_artifacts_table.up.sql  migrate.ts  migration-tracker.sql
backend/src/middleware/: cors.ts
backend/src/routes/: artifacts.ts  health.ts
backend/src/types/: artifacts.ts
backend/src/validators/: artifacts.ts
frontend/: .env.example  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: artifacts.ts  client.ts  health.ts  index.ts  types.ts
frontend/src/components/: ArtifactManager.tsx  DemoEngine.tsx  Footer.tsx  Navbar.tsx  SaveArtifactModal.tsx
frontend/src/components/sections/: ArchitectureSection.tsx  CTASection.tsx  ComparisonSection.tsx  (+7 more)
frontend/src/contexts/: AppContext.tsx
frontend/src/hooks/: useWasm.ts
frontend/src/pages/: DemoPage.tsx  Home.tsx  Landing.tsx
frontend/src/styles/: design-system.css
frontend/src/types/: wasm.ts
wasm/: Cargo.toml
wasm/pkg/: ironclad_wasm.d.ts  ironclad_wasm.js  ironclad_wasm_bg.wasm  ironclad_wasm_bg.wasm.d.ts  package.json
wasm/src/: lib.rs
(+8 files in other folders)
